test_regress/t/t_constraint_method_bad.out
%Error: t/t_constraint_method_bad.v:13:12: No such constraint method 'bad_method'
                                         : ... note: In instance 't'
   13 |       cons.bad_method(1);   
      |            ^~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
